# nemo-guardrails-cai

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_WORKFLOWS_SUMMARY.md  README.md  app.py  model_service.py  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  deploy-guardrails.yml  publish.yml
cai_integration/: CAI_API_MIGRATION.md  README.md  app_startup.py  app_startup.sh  create_jobs.py  git_sync.sh  jobs_config.yaml  jobs_config_with_git_sync.yaml  launch_guardrails.py  launch_guardrails.sh  launch_guardrails_job.py  setup_environment.py  setup_environment.sh  setup_project.py  trigger_jobs.py
docs/: LOCAL_MODELS.md  MODEL_COMPARISON.md  RAILS_IMPLEMENTATION.md  RAILS_STRUCTURE.md
examples/: README.md  basic_usage.py  client_usage.py  guardrails_config.yaml  server_config.yaml  server_config_with_local_models.yaml
examples/config/: config.yml
examples/config/rails/: moderation.co  topical.co
examples/config_with_local_models/: config.yml
examples/config_with_local_models/rails/: local_model_checks.co
examples/local_test/: .env.example  CONDA_SETUP.md  ENV_SETUP.md  IMPLEMENTATION_FIX.md  QUICKSTART_CONDA.md  README.md  TEST_NOW.md  TROUBLESHOOTING.md  UNDERSTANDING_CONFIGS.md  config.yml  diagnose.py  prompts.yml  quick_start.sh  run_with_conda.sh  setup_env.sh  test_client.py  test_server.py  test_simple.py
nemo_guardrails_cai/: __init__.py  config.py  server.py  utils.py
nemo_guardrails_cai/actions/: __init__.py  model_checks.py
nemo_guardrails_cai/models/: __init__.py  base.py  huggingface.py  registry.py
